deploy: df7ad4b505f0ef09f28713f5c7c298f9cf3521ee

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -112,10 +112,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#spain-itinerary-sept-28-to-oct-8-2025" id="toc-spain-itinerary-sept-28-to-oct-8-2025" class="nav-link active" data-scroll-target="#spain-itinerary-sept-28-to-oct-8-2025">Spain Itinerary – Sept 28 to Oct 8, 2025</a>
-  <ul class="collapse">
-  <li><a href="#flights-booked" id="toc-flights-booked" class="nav-link" data-scroll-target="#flights-booked">Flights (Booked)</a></li>
-  <li><a href="#train-booked" id="toc-train-booked" class="nav-link" data-scroll-target="#train-booked">Train (Booked)</a></li>
+  <li><a href="#flights" id="toc-flights" class="nav-link active" data-scroll-target="#flights">Flights</a></li>
+  <li><a href="#train" id="toc-train" class="nav-link" data-scroll-target="#train">Train</a></li>
   <li><a href="#itinerary" id="toc-itinerary" class="nav-link" data-scroll-target="#itinerary">Itinerary</a>
   <ul class="collapse">
   <li><a href="#day-1-sun-sept-28" id="toc-day-1-sun-sept-28" class="nav-link" data-scroll-target="#day-1-sun-sept-28">Day 1 – Sun Sept 28</a></li>
@@ -126,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#day-10-tue-oct-7" id="toc-day-10-tue-oct-7" class="nav-link" data-scroll-target="#day-10-tue-oct-7">Day 10 – Tue Oct 7</a></li>
   <li><a href="#day-11-wed-oct-8" id="toc-day-11-wed-oct-8" class="nav-link" data-scroll-target="#day-11-wed-oct-8">Day 11 – Wed Oct 8</a></li>
   </ul></li>
-  <li><a href="#packing-list-rei-trail-40l" id="toc-packing-list-rei-trail-40l" class="nav-link" data-scroll-target="#packing-list-rei-trail-40l">Packing List – REI Trail 40L</a>
+  <li><a href="#packing-list" id="toc-packing-list" class="nav-link" data-scroll-target="#packing-list">Packing List</a>
   <ul class="collapse">
   <li><a href="#documents-money" id="toc-documents-money" class="nav-link" data-scroll-target="#documents-money">Documents &amp; Money</a></li>
   <li><a href="#pack-setup" id="toc-pack-setup" class="nav-link" data-scroll-target="#pack-setup">Pack Setup</a></li>
@@ -139,7 +137,6 @@ ul.task-list li input[type="checkbox"] {
   </ul></li>
   <li><a href="#lodging-notes" id="toc-lodging-notes" class="nav-link" data-scroll-target="#lodging-notes">Lodging Notes</a></li>
   <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a></li>
-  </ul></li>
   </ul>
 <div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="spain-2025-itinerary.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li><li><a href="spain-2025-itinerary.docx"><i class="bi bi-file-word"></i>MS Word</a></li></ul></div></nav>
     </div>
@@ -165,12 +162,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="spain-itinerary-sept-28-to-oct-8-2025" class="level1">
-<h1>Spain Itinerary – Sept 28 to Oct 8, 2025</h1>
-<p>Traveler: David Van Dyke</p>
-<hr>
-<section id="flights-booked" class="level2">
-<h2 class="anchored" data-anchor-id="flights-booked">Flights (Booked)</h2>
+<section id="flights" class="level2">
+<h2 class="anchored" data-anchor-id="flights">Flights</h2>
 <ul>
 <li><strong>Sept 28</strong>: Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
 <ul>
@@ -187,8 +180,8 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <hr>
 </section>
-<section id="train-booked" class="level2">
-<h2 class="anchored" data-anchor-id="train-booked">Train (Booked)</h2>
+<section id="train" class="level2">
+<h2 class="anchored" data-anchor-id="train">Train</h2>
 <ul>
 <li><strong>Sept 29</strong>: Madrid Chamartín → Sarria
 <ul>
@@ -212,6 +205,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-1-sun-sept-28" class="level3">
 <h3 class="anchored" data-anchor-id="day-1-sun-sept-28">Day 1 – Sun Sept 28</h3>
 <ul>
+<li>Drop off Gus</li>
 <li>Depart Muskegon midday.<br>
 </li>
 <li>Connect through Chicago.<br>
@@ -247,16 +241,18 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>13:47 — Arrive Sarria.<br>
 </li>
-<li>Check-in: <strong>Albergue Internacional O Durmiñento</strong> (Rúa Maior 31).<br>
+<li>Check-in: <strong>need to book</strong></li>
+<li>Afternoon: explore old town.
+<ul>
+<li>Pick up pilgrim credential (credencial) at Iglesia de Santa Mariña, the Tourist Office on Rúa Maior. Monastery of La Magdalena is another option. (~€2–3 cash)<br>
 </li>
-<li>Afternoon: explore old town, buy pilgrim credential if needed.<br>
-</li>
+</ul></li>
 <li>Evening: pilgrim dinner.
 <ul>
 <li>Recommended to join a lively spot such as Mesón O Tapas do Peregrino or O Descanso for the set pilgrim menu (starter, main, dessert, wine/water). These places are popular with walkers and a good way to meet fellow pilgrims before starting the Camino.<br>
 </li>
 </ul></li>
-<li>Overnight: O Durmiñento.</li>
+<li>Overnight: <strong>need to book</strong></li>
 </ul>
 </section>
 <section id="days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="level3">
@@ -294,7 +290,11 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Full day in Santiago.<br>
 </li>
-<li>Pilgrim’s Mass, cathedral visit, optional Finisterre/Muxía excursion.<br>
+<li>Morning: Pilgrim’s Mass or cathedral museum/rooftop tour.<br>
+</li>
+<li>Afternoon: wander the old town, Alameda Park, and relax at a café.<br>
+</li>
+<li>Evening tapas crawl on Rúa do Franco.<br>
 </li>
 <li>Overnight: Santiago.</li>
 </ul>
@@ -302,21 +302,27 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-9-mon-oct-6" class="level3">
 <h3 class="anchored" data-anchor-id="day-9-mon-oct-6">Day 9 – Mon Oct 6</h3>
 <ul>
-<li>Morning: train or short flight Santiago → Madrid (~3 hrs train).<br>
+<li>Day trip to Finisterre &amp; Muxía.<br>
 </li>
-<li>Evening: tapas crawl in La Latina or Malasaña.<br>
+<li>Morning bus to Finisterre (~2.5 hrs). Visit lighthouse, beach, and port.<br>
 </li>
-<li>Overnight: Madrid.</li>
+<li>Continue to Muxía for the Sanctuary of Nosa Señora da Barca on the rocky coast.<br>
+</li>
+<li>Evening bus back to Santiago (~2.5 hrs).<br>
+</li>
+<li>Overnight: Santiago.</li>
 </ul>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
 <h3 class="anchored" data-anchor-id="day-10-tue-oct-7">Day 10 – Tue Oct 7</h3>
 <ul>
-<li>Full day in Madrid.<br>
+<li>Leisurely morning in Santiago — final cathedral plaza coffee or stroll.<br>
 </li>
-<li>Options: Prado, Reina Sofía, Royal Palace, Mercado de San Miguel.<br>
+<li>Afternoon train or short flight to Madrid (~3 hrs AVE train, ~1 hr flight).<br>
 </li>
-<li>Overnight: Madrid.</li>
+<li>Evening: tapas crawl in La Latina or Malasaña.<br>
+</li>
+<li>Overnight: Madrid (stay near Sol, Gran Vía, or La Latina).</li>
 </ul>
 </section>
 <section id="day-11-wed-oct-8" class="level3">
@@ -326,23 +332,21 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>18:00 — Flight Chicago → Muskegon.<br>
 </li>
+<li>Pick up Gus</li>
 <li>Home.</li>
 </ul>
 <hr>
 </section>
 </section>
-<section id="packing-list-rei-trail-40l" class="level2">
-<h2 class="anchored" data-anchor-id="packing-list-rei-trail-40l">Packing List – REI Trail 40L</h2>
+<section id="packing-list" class="level2">
+<h2 class="anchored" data-anchor-id="packing-list">Packing List</h2>
 <section id="documents-money" class="level3">
 <h3 class="anchored" data-anchor-id="documents-money">Documents &amp; Money</h3>
 <ul>
-<li>Passport + photocopy<br>
-</li>
-<li>Pilgrim credential (credencial)<br>
-</li>
+<li>Passport</li>
 <li>Flight &amp; train tickets (digital copies on phone + 1 printed copy as backup)<br>
 </li>
-<li>Credit card + some euro cash</li>
+<li>Credit + ATM cards</li>
 </ul>
 </section>
 <section id="pack-setup" class="level3">
@@ -372,11 +376,9 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>1 lightweight shorts (backup rotation)<br>
 </li>
-<li>3 pairs quick-dry underwear (2 ExOfficio + 1 synthetic/merino)<br>
+<li>3 pairs quick-dry underwear (2 ExOfficio + 1 Smartwool synthetic/merino)<br>
 </li>
-<li>3 pairs hiking socks (merino blend)<br>
-</li>
-<li>Optional: 1 merino polo or collared shirt for town</li>
+<li>3 pairs hiking socks (merino blend)</li>
 </ul>
 </section>
 <section id="footwear" class="level3">
@@ -408,6 +410,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>Nail clippers<br>
 </li>
+<li>Disposable contacts as glasses backup</li>
 <li>Optional: Small travel shampoo or shampoo bar (can skip or buy in Spain)</li>
 </ul>
 </section>
@@ -415,8 +418,6 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="health-first-aid">Health &amp; First Aid</h3>
 <ul>
 <li>Walgreens blister pads (Compeed-style hydrocolloid)<br>
-</li>
-<li>A few Band-Aids + athletic tape<br>
 </li>
 <li>Ibuprofen<br>
 </li>
@@ -430,17 +431,13 @@ ul.task-list li input[type="checkbox"] {
 <section id="electronics" class="level3">
 <h3 class="anchored" data-anchor-id="electronics">Electronics</h3>
 <ul>
-<li>Phone + charger<br>
+<li>Phone + USB-C cord<br>
 </li>
-<li>Plug adapter (Type C/E, 220V)<br>
-</li>
-<li>Power bank (charges with MacBook Air USB-C cable)<br>
-</li>
-<li>AirPods or headphones<br>
-</li>
+<li>EU Plug adapter</li>
+<li>AirPods</li>
 <li>Apple Watch + charger<br>
 </li>
-<li>13″ MacBook Air (also charger for power bank)</li>
+<li>13″ MacBook Air (with power bank/cord)</li>
 </ul>
 </section>
 <section id="other" class="level3">
@@ -448,13 +445,10 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Sunglasses<br>
 </li>
-<li>Hat (brimmed for sun/rain)<br>
-</li>
-<li>Lightweight guide notes<br>
-</li>
+<li>Hat</li>
 <li>Safety pins or clothesline for drying<br>
 </li>
-<li>Sleep sack / liner (silk or lightweight synthetic, for albergues)<br>
+<li>Sleep sack / liner (for albergues)<br>
 </li>
 <li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
 </ul>
@@ -480,17 +474,13 @@ ul.task-list li input[type="checkbox"] {
 <section id="notes-next-steps" class="level2">
 <h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
 <ul>
-<li>Confirm Camino lodging (Sarria booked, reserve key towns).<br>
-</li>
+<li>Confirm Camino lodging</li>
 <li>Book Santiago (Oct 4–5) and Madrid (Oct 6–7) hotels.<br>
-</li>
-<li>Decide on Finisterre/Muxía excursion (Oct 5).<br>
 </li>
 <li>Print or store Renfe QR code + Combinado Cercanías info on phone.</li>
 </ul>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
