deploy: fb0f195cf43ad869649831f0f7cdaa7c5a986e48

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -112,9 +112,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#flights" id="toc-flights" class="nav-link active" data-scroll-target="#flights">Flights</a></li>
-  <li><a href="#train" id="toc-train" class="nav-link" data-scroll-target="#train">Train</a></li>
-  <li><a href="#itinerary" id="toc-itinerary" class="nav-link" data-scroll-target="#itinerary">Itinerary</a>
+  <li><a href="#itinerary" id="toc-itinerary" class="nav-link active" data-scroll-target="#itinerary">Itinerary</a>
   <ul class="collapse">
   <li><a href="#day-1-sun-sept-28" id="toc-day-1-sun-sept-28" class="nav-link" data-scroll-target="#day-1-sun-sept-28">Day 1 – Sun Sept 28</a></li>
   <li><a href="#day-2-mon-sept-29" id="toc-day-2-mon-sept-29" class="nav-link" data-scroll-target="#day-2-mon-sept-29">Day 2 – Mon Sept 29</a></li>
@@ -136,7 +134,10 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#other" id="toc-other" class="nav-link" data-scroll-target="#other">Other</a></li>
   </ul></li>
   <li><a href="#lodging-notes" id="toc-lodging-notes" class="nav-link" data-scroll-target="#lodging-notes">Lodging Notes</a></li>
-  <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a></li>
+  <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a>
+  <ul class="collapse">
+  <li><a href="#summary-of-tickets-booked" id="toc-summary-of-tickets-booked" class="nav-link" data-scroll-target="#summary-of-tickets-booked">Summary of Tickets (Booked)</a></li>
+  </ul></li>
   </ul>
 <div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="spain-2025-itinerary.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li><li><a href="spain-2025-itinerary.docx"><i class="bi bi-file-word"></i>MS Word</a></li></ul></div></nav>
     </div>
@@ -162,55 +163,18 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="flights" class="level2">
-<h2 class="anchored" data-anchor-id="flights">Flights</h2>
-<ul>
-<li><strong>Sept 28</strong>: Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
-<ul>
-<li>Connection at Chicago ORD: Arrive Terminal 3 (Denver Air Connection). Iberia also departs Terminal 3.
-<ul>
-<li>You can access the <strong>American Airlines Flagship Lounge</strong> in T3 near Gate K19 with your Iberia business class boarding pass.</li>
-</ul></li>
-</ul></li>
-<li><strong>Sept 28</strong>: Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)<br>
-</li>
-<li><strong>Oct 8</strong>: Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
-</li>
-<li><strong>Oct 8</strong>: Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
-</ul>
-<hr>
-</section>
-<section id="train" class="level2">
-<h2 class="anchored" data-anchor-id="train">Train</h2>
-<ul>
-<li><strong>Sept 29</strong>: Madrid Chamartín → Sarria
-<ul>
-<li>10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B)<br>
-</li>
-<li>12:18 — Arrive Ourense<br>
-</li>
-<li>Follow signs to the connecting MD (Media Distancia) platform.</li>
-<li>Your ticket already includes the connection; no need to revalidate, just check the platform number on the departure board.</li>
-<li>The transfer window is short (~14 minutes), so move directly from arrival platform to the regional train platform.</li>
-<li>12:32 — Depart Ourense (MD 12694)<br>
-</li>
-<li>13:47 — Arrive Sarria</li>
-</ul></li>
-</ul>
-<p><em>Combinado Cercanías included → free airport-to-Chamartín commuter ticket.</em></p>
-<hr>
-</section>
 <section id="itinerary" class="level2">
 <h2 class="anchored" data-anchor-id="itinerary">Itinerary</h2>
 <section id="day-1-sun-sept-28" class="level3">
 <h3 class="anchored" data-anchor-id="day-1-sun-sept-28">Day 1 – Sun Sept 28</h3>
 <ul>
 <li>Drop off Gus</li>
-<li>Depart Muskegon midday.<br>
-</li>
-<li>Connect through Chicago.<br>
-</li>
-<li>Overnight flight to Madrid.</li>
+<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
+<ul>
+<li>Connection at Chicago ORD: Arrive Terminal 3 (Denver Air Connection). Iberia also departs Terminal 3.</li>
+<li>You can access the <strong>American Airlines Flagship Lounge</strong> in T3 near Gate K19 with your Iberia business class boarding pass.</li>
+</ul></li>
+<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
 </ul>
 </section>
 <section id="day-2-mon-sept-29" class="level3">
@@ -230,16 +194,17 @@ ul.task-list li input[type="checkbox"] {
 </ul></li>
 <li>~09:30 — Arrive Chamartín, coffee/snack.<br>
 </li>
-<li>10:04 — Train Chamartín → Ourense (Confort).<br>
+<li>10:04 — 10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B)<br>
 </li>
-<li>12:18 — Arrive Ourense.<br>
-</li>
+<li>12:18 — Arrive Ourense.
+<ul>
 <li>Follow signs to the connecting MD (Media Distancia) platform.</li>
 <li>Your ticket already includes the connection; no need to revalidate, just check the platform number on the departure board.</li>
 <li>The transfer window is short (~14 minutes), so move directly from arrival platform to the regional train platform.</li>
-<li>12:32 — Train Ourense → Sarria.<br>
+</ul></li>
+<li>12:32 — Depart Ourense (MD 12694)<br>
 </li>
-<li>13:47 — Arrive Sarria.<br>
+<li>13:47 — Arrive Sarria<br>
 </li>
 <li>Check-in: <strong>need to book</strong></li>
 <li>Afternoon: explore old town.
@@ -328,12 +293,11 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-11-wed-oct-8" class="level3">
 <h3 class="anchored" data-anchor-id="day-11-wed-oct-8">Day 11 – Wed Oct 8</h3>
 <ul>
-<li>11:35 — Flight Madrid → Chicago ORD.<br>
-</li>
-<li>18:00 — Flight Chicago → Muskegon.<br>
-</li>
-<li>Pick up Gus</li>
-<li>Home.</li>
+<li><p>Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
+</p></li>
+<li><p>Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</p></li>
+<li><p>Pick up Gus</p></li>
+<li><p>Home.</p></li>
 </ul>
 <hr>
 </section>
@@ -479,8 +443,35 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li>Print or store Renfe QR code + Combinado Cercanías info on phone.</li>
 </ul>
+<hr>
+<section id="summary-of-tickets-booked" class="level3">
+<h3 class="anchored" data-anchor-id="summary-of-tickets-booked">Summary of Tickets (Booked)</h3>
+<ul>
+<li><strong>Flights</strong>
+<ul>
+<li>Denver Air Connection Booking Reference: AAZXSG
+<ul>
+<li>Sept 28: Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)</li>
+<li>Oct 8: Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
+</ul></li>
+<li>Iberia Booking Reference: ETKT494 2300390565/01-02
+<ul>
+<li>Sept 28: Chicago ORD → Madrid (IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
+<li>Oct 8: Madrid → Chicago ORD (IB 341, dep 11:35 am, arr 2:15 pm)</li>
+</ul></li>
+</ul></li>
+<li><strong>Train</strong>
+<ul>
+<li>Booking Reference: MLVGKH-3EFcRFjV
+<ul>
+<li>Sept 29: Madrid Chamartín → Ourense (AVE 05273, dep 10:04 am, arr 12:18 pm, seat 05B Confort)</li>
+<li>Sept 29: Ourense → Sarria (MD 12694, dep 12:32 pm, arr 1:47 pm)</li>
+</ul></li>
+</ul></li>
+</ul>
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
