deploy: 7e862f300d218711cac1cda527f503303ea90198

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -133,7 +133,6 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#electronics" id="toc-electronics" class="nav-link" data-scroll-target="#electronics">Electronics</a></li>
   <li><a href="#other" id="toc-other" class="nav-link" data-scroll-target="#other">Other</a></li>
   </ul></li>
-  <li><a href="#lodging-notes" id="toc-lodging-notes" class="nav-link" data-scroll-target="#lodging-notes">Lodging Notes</a></li>
   <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a>
   <ul class="collapse">
   <li><a href="#summary-of-tickets-booked" id="toc-summary-of-tickets-booked" class="nav-link" data-scroll-target="#summary-of-tickets-booked">Summary of Tickets (Booked)</a></li>
@@ -194,7 +193,7 @@ ul.task-list li input[type="checkbox"] {
 </ul></li>
 <li>~09:30 — Arrive Chamartín, coffee/snack.<br>
 </li>
-<li>10:04 — 10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B)<br>
+<li>10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B)<br>
 </li>
 <li>12:18 — Arrive Ourense.
 <ul>
@@ -204,9 +203,14 @@ ul.task-list li input[type="checkbox"] {
 </ul></li>
 <li>12:32 — Depart Ourense (MD 12694)<br>
 </li>
-<li>13:47 — Arrive Sarria<br>
+<li>13:47 — Arrive Sarria
+<ul>
+<li>Walk from the train station to <strong>Albergue O Durmiñento</strong> (~1 km / 10–12 minutes):<br>
+Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the corner, continue straight toward the old town, then turn left onto Rúa Maior. Follow Rúa Maior past the church of Santa Mariña; the albergue is further along at no. 48.<br>
 </li>
-<li>Check-in: <strong>need to book</strong></li>
+</ul></li>
+<li>Check-in: <strong>Albergue O Durmiñento</strong> (Confirmation no. 6103.134.828).<br>
+</li>
 <li>Afternoon: explore old town.
 <ul>
 <li>Pick up pilgrim credential (credencial) at Iglesia de Santa Mariña, the Tourist Office on Rúa Maior. Monastery of La Magdalena is another option. (~€2–3 cash)<br>
@@ -214,10 +218,8 @@ ul.task-list li input[type="checkbox"] {
 </ul></li>
 <li>Evening: pilgrim dinner.
 <ul>
-<li>Recommended to join a lively spot such as Mesón O Tapas do Peregrino or O Descanso for the set pilgrim menu (starter, main, dessert, wine/water). These places are popular with walkers and a good way to meet fellow pilgrims before starting the Camino.<br>
-</li>
+<li>Recommended to join a lively spot such as Mesón O Tapas do Peregrino or O Descanso for the set pilgrim menu (starter, main, dessert, wine/water). These places are popular with walkers and a good way to meet fellow pilgrims before starting the Camino.</li>
 </ul></li>
-<li>Overnight: <strong>need to book</strong></li>
 </ul>
 </section>
 <section id="days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="level3">
@@ -267,25 +269,25 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-9-mon-oct-6" class="level3">
 <h3 class="anchored" data-anchor-id="day-9-mon-oct-6">Day 9 – Mon Oct 6</h3>
 <ul>
-<li>Day trip to Finisterre &amp; Muxía.<br>
+<li>Morning bus to Finisterre (~2.5 hrs).<br>
 </li>
-<li>Morning bus to Finisterre (~2.5 hrs). Visit lighthouse, beach, and port.<br>
+<li>Explore the fishing port, beach, and town.<br>
 </li>
-<li>Continue to Muxía for the Sanctuary of Nosa Señora da Barca on the rocky coast.<br>
+<li>Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”<br>
 </li>
-<li>Evening bus back to Santiago (~2.5 hrs).<br>
-</li>
-<li>Overnight: Santiago.</li>
+<li>Overnight: Finisterre (hotel or albergue in town).</li>
 </ul>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
 <h3 class="anchored" data-anchor-id="day-10-tue-oct-7">Day 10 – Tue Oct 7</h3>
 <ul>
-<li>Leisurely morning in Santiago — final cathedral plaza coffee or stroll.<br>
+<li>Morning in Finisterre — coffee in town or short coastal stroll.<br>
 </li>
-<li>Afternoon train or short flight to Madrid (~3 hrs AVE train, ~1 hr flight).<br>
+<li>Midday bus back to Santiago (~2.5 hrs).<br>
 </li>
-<li>Evening: tapas crawl in La Latina or Malasaña.<br>
+<li>Connect onward to Madrid in the afternoon (~3 hrs AVE train, ~1 hr flight).<br>
+</li>
+<li>Evening tapas crawl in La Latina or Malasaña.<br>
 </li>
 <li>Overnight: Madrid (stay near Sol, Gran Vía, or La Latina).</li>
 </ul>
@@ -417,16 +419,7 @@ ul.task-list li input[type="checkbox"] {
 <li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
 </ul>
 <hr>
-</section>
-</section>
-<section id="lodging-notes" class="level2">
-<h2 class="anchored" data-anchor-id="lodging-notes">Lodging Notes</h2>
 <ul>
-<li><strong>Sept 29 (Sarria):</strong> Albergue Internacional O Durmiñento (book ahead).
-<ul>
-<li>Backup: Casa Barán (pensión, private rooms).<br>
-</li>
-</ul></li>
 <li><strong>Camino towns (Sept 30–Oct 4):</strong> book 1–2 nights ahead, especially Portomarín &amp; Arzúa.<br>
 </li>
 <li><strong>Santiago (Oct 4–5):</strong> reserve hotel now (city fills with pilgrims).<br>
@@ -435,11 +428,12 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <hr>
 </section>
+</section>
 <section id="notes-next-steps" class="level2">
 <h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
 <ul>
 <li>Confirm Camino lodging</li>
-<li>Book Santiago (Oct 4–5) and Madrid (Oct 6–7) hotels.<br>
+<li>Book Santiago (Oct 4–7) and Madrid (Oct 6–7) hotels.<br>
 </li>
 <li>Print or store Renfe QR code + Combinado Cercanías info on phone.</li>
 </ul>
