deploy: a3ea6117901434021ce1cb5cb8431a419c3804a7

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -248,7 +248,9 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Highlights include Lavacolla, the traditional cleansing site, Monte do Gozo offering panoramic views of Santiago, and attending the Pilgrim’s Mass featuring the Botafumeiro.</li>
 <li>Collect Compostela certificate in Santiago.<br>
 </li>
-<li>Overnight: Santiago.</li>
+<li>Check-in: <strong>Pensión Rua Nova</strong> (Rúa Nova, 4, Santiago de Compostela; Confirmation no. 6216.069.981).<br>
+</li>
+<li>Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
 </ul></li>
 </ul>
 </section>
