--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -133,10 +133,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#electronics" id="toc-electronics" class="nav-link" data-scroll-target="#electronics">Electronics</a></li>
   <li><a href="#other" id="toc-other" class="nav-link" data-scroll-target="#other">Other</a></li>
   </ul></li>
-  <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a>
-  <ul class="collapse">
-  <li><a href="#summary-of-tickets-booked" id="toc-summary-of-tickets-booked" class="nav-link" data-scroll-target="#summary-of-tickets-booked">Summary of Tickets (Booked)</a></li>
-  </ul></li>
+  <li><a href="#notes-next-steps" id="toc-notes-next-steps" class="nav-link" data-scroll-target="#notes-next-steps">Notes &amp; Next Steps</a></li>
   </ul>
 <div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="spain-2025-itinerary.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li><li><a href="spain-2025-itinerary.docx"><i class="bi bi-file-word"></i>MS Word</a></li></ul></div></nav>
     </div>
@@ -167,13 +164,11 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-1-sun-sept-28" class="level3">
 <h3 class="anchored" data-anchor-id="day-1-sun-sept-28">Day 1 – Sun Sept 28</h3>
 <ul>
-<li>Drop off Gus</li>
-<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
+<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am) Denver Air Connection Booking Reference: AAZXSG
 <ul>
-<li>Connection at Chicago ORD: Arrive Terminal 3 (Denver Air Connection). Iberia also departs Terminal 3.</li>
-<li>You can access the <strong>American Airlines Flagship Lounge</strong> in T3 near Gate K19 with your Iberia business class boarding pass.</li>
+<li><strong>American Airlines Flagship Lounge</strong> in T3 near Gate K19</li>
 </ul></li>
-<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
+<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am) Iberia Booking Reference: ETKT494 2300390565/01-02</li>
 </ul>
 </section>
 <section id="day-2-mon-sept-29" class="level3">
@@ -193,7 +188,7 @@ ul.task-list li input[type="checkbox"] {
 </ul></li>
 <li>~09:30 — Arrive Chamartín, coffee/snack.<br>
 </li>
-<li>10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B)<br>
+<li>10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B) Booking Reference: MLVGKH-3EFcRFjV<br>
 </li>
 <li>12:18 — Arrive Ourense.
 <ul>
@@ -209,7 +204,7 @@ ul.task-list li input[type="checkbox"] {
 Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the corner, continue straight toward the old town, then turn left onto Rúa Maior. Follow Rúa Maior past the church of Santa Mariña; the albergue is further along at no. 48.<br>
 </li>
 </ul></li>
-<li>Check-in: <strong>Albergue O Durmiñento</strong> (Confirmation no. 6103.134.828).<br>
+<li>Check-in: <strong>Albergue O Durmiñento</strong> (Booking.com Confirmation no. 6103.134.828).<br>
 </li>
 <li>Afternoon: explore old town.
 <ul>
@@ -228,29 +223,31 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li><strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km)
 <ul>
 <li>Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.</li>
+<li>Overnight: Portomarín TBD</li>
 </ul></li>
 <li><strong>Day 4 (Oct 1):</strong> Portomarín → Palas de Rei (~25 km)
 <ul>
 <li>Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.</li>
+<li>Overnight: Palas de Rei TBD</li>
 </ul></li>
 <li><strong>Day 5 (Oct 2):</strong> Palas de Rei → Arzúa (~29 km)
 <ul>
 <li>Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.<br>
 </li>
 <li>Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.</li>
+<li>Overnight: Arzúa TBD</li>
 </ul></li>
 <li><strong>Day 6 (Oct 3):</strong> Arzúa → O Pedrouzo (~19 km)
 <ul>
 <li>En route visit the chapel of Santa Irene and experience the atmosphere of anticipation in O Pedrouzo as pilgrims gather for the final day.</li>
+<li>Overnight: O Pedrouzo TBD</li>
 </ul></li>
 <li><strong>Day 7 (Oct 4):</strong> O Pedrouzo → Santiago (~20 km)
 <ul>
 <li>Highlights include Lavacolla, the traditional cleansing site, Monte do Gozo offering panoramic views of Santiago, and attending the Pilgrim’s Mass featuring the Botafumeiro.</li>
 <li>Collect Compostela certificate in Santiago.<br>
 </li>
-<li>Check-in: <strong>Pensión Rua Nova</strong> (Rúa Nova, 4, Santiago de Compostela; Confirmation no. 6216.069.981).<br>
-</li>
-<li>Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
+<li>Overnight: <strong>Pensión Rua Nova</strong> (Rúa Nova, 4, Santiago de Compostela; Booking.com Confirmation no. 6216.069.981).</li>
 </ul></li>
 </ul>
 </section>
@@ -259,13 +256,13 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <ul>
 <li>Full day in Santiago.<br>
 </li>
-<li>Morning: Pilgrim’s Mass or cathedral museum/rooftop tour.<br>
+<li>Morning: Pilgrim’s Mass and/or cathedral museum/rooftop tour.<br>
 </li>
 <li>Afternoon: wander the old town, Alameda Park, and relax at a café.<br>
 </li>
 <li>Evening tapas crawl on Rúa do Franco.<br>
 </li>
-<li>Overnight: Santiago.</li>
+<li>Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
 </ul>
 </section>
 <section id="day-9-mon-oct-6" class="level3">
@@ -291,17 +288,15 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening tapas crawl in La Latina or Malasaña.<br>
 </li>
-<li>Overnight: Madrid (stay near Sol, Gran Vía, or La Latina).</li>
+<li>Overnight: Madrid TBD (stay near Sol, Gran Vía, or La Latina).</li>
 </ul>
 </section>
 <section id="day-11-wed-oct-8" class="level3">
 <h3 class="anchored" data-anchor-id="day-11-wed-oct-8">Day 11 – Wed Oct 8</h3>
 <ul>
-<li><p>Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
-</p></li>
-<li><p>Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</p></li>
-<li><p>Pick up Gus</p></li>
-<li><p>Home.</p></li>
+<li>Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
+</li>
+<li>Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
 </ul>
 <hr>
 </section>
@@ -421,53 +416,21 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
 </ul>
 <hr>
-<ul>
-<li><strong>Camino towns (Sept 30–Oct 4):</strong> book 1–2 nights ahead, especially Portomarín &amp; Arzúa.<br>
-</li>
-<li><strong>Santiago (Oct 4–5):</strong> reserve hotel now (city fills with pilgrims).<br>
-</li>
-<li><strong>Madrid (Oct 6–7):</strong> stay near Sol, Gran Vía, or La Latina.</li>
-</ul>
-<hr>
 </section>
 </section>
 <section id="notes-next-steps" class="level2">
 <h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
 <ul>
-<li>Confirm Camino lodging</li>
-<li>Book Santiago (Oct 4–7) and Madrid (Oct 6–7) hotels.<br>
+<li><strong>Camino towns (Sept 30–Oct 4):</strong> book 1–2 nights ahead, especially Portomarín &amp; Arzúa.<br>
 </li>
+<li>Book AVE from Santiago to Madrid</li>
+<li>Book Madrid (Oct 6–7) hotels.</li>
+<li>Decide 2 vs.&nbsp;3 nights in Santiago +/- daytrip to Finisterre or other vs.&nbsp;Overnight in Finisterre</li>
 <li>Print or store Renfe QR code + Combinado Cercanías info on phone.</li>
 </ul>
 <hr>
-<section id="summary-of-tickets-booked" class="level3">
-<h3 class="anchored" data-anchor-id="summary-of-tickets-booked">Summary of Tickets (Booked)</h3>
-<ul>
-<li><strong>Flights</strong>
-<ul>
-<li>Denver Air Connection Booking Reference: AAZXSG
-<ul>
-<li>Sept 28: Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)</li>
-<li>Oct 8: Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
-</ul></li>
-<li>Iberia Booking Reference: ETKT494 2300390565/01-02
-<ul>
-<li>Sept 28: Chicago ORD → Madrid (IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
-<li>Oct 8: Madrid → Chicago ORD (IB 341, dep 11:35 am, arr 2:15 pm)</li>
-</ul></li>
-</ul></li>
-<li><strong>Train</strong>
-<ul>
-<li>Booking Reference: MLVGKH-3EFcRFjV
-<ul>
-<li>Sept 29: Madrid Chamartín → Ourense (AVE 05273, dep 10:04 am, arr 12:18 pm, seat 05B Confort)</li>
-<li>Sept 29: Ourense → Sarria (MD 12694, dep 12:32 pm, arr 1:47 pm)</li>
-</ul></li>
-</ul></li>
-</ul>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
