deploy: 88c5fcdf0c483a487e3b87a7fcf1cc15a208d0e3

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -164,11 +164,15 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-1-sun-sept-28" class="level3">
 <h3 class="anchored" data-anchor-id="day-1-sun-sept-28">Day 1 – Sun Sept 28</h3>
 <ul>
-<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am) Denver Air Connection Booking Reference: AAZXSG
+<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
 <ul>
-<li><strong>American Airlines Flagship Lounge</strong> in T3 near Gate K19</li>
+<li><em>Denver Air Connection Booking Reference: AAZXSG</em></li>
 </ul></li>
-<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am) Iberia Booking Reference: ETKT494 2300390565/01-02</li>
+<li>American Airlines Flagship Lounge in T3 near Gate K19</li>
+<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)
+<ul>
+<li><em>Iberia Booking Reference: ETKT494 2300390565/01-02</em></li>
+</ul></li>
 </ul>
 </section>
 <section id="day-2-mon-sept-29" class="level3">
@@ -176,13 +180,13 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>07:55 — Arrive Madrid Barajas T4.<br>
 </li>
-<li><strong>08:50–09:10 — Transfer to Chamartín (Cercanías train):</strong>
+<li>08:50–09:10 — Transfer to Chamartín (Cercanías train):
 <ul>
 <li>Follow signs for <strong>Cercanías / Renfe</strong> at T4.<br>
 </li>
 <li>Go down to the Cercanías station located beneath T4.</li>
 <li>Use your Renfe ticket’s “Combinado Cercanías” code to get a free Cercanías ticket from the red/white Renfe ticket machines.</li>
-<li>Select Chamartín as your destination.</li>
+<li>Select <strong>Chamartín</strong> as your destination.</li>
 <li>Take line <strong>C1 or C10</strong> (~20 min, trains every 15–20 min).<br>
 </li>
 </ul></li>
@@ -193,7 +197,6 @@ ul.task-list li input[type="checkbox"] {
 <li>12:18 — Arrive Ourense.
 <ul>
 <li>Follow signs to the connecting MD (Media Distancia) platform.</li>
-<li>Your ticket already includes the connection; no need to revalidate, just check the platform number on the departure board.</li>
 <li>The transfer window is short (~14 minutes), so move directly from arrival platform to the regional train platform.</li>
 </ul></li>
 <li>12:32 — Depart Ourense (MD 12694)<br>
