--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -226,24 +226,24 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li><strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km)
 <ul>
 <li>Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.</li>
-<li>Overnight: Portomarín TBD</li>
+<li>Overnight: Portomarín <strong>TBD</strong></li>
 </ul></li>
 <li><strong>Day 4 (Oct 1):</strong> Portomarín → Palas de Rei (~25 km)
 <ul>
 <li>Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.</li>
-<li>Overnight: Palas de Rei TBD</li>
+<li>Overnight: Palas de Rei <strong>TBD</strong></li>
 </ul></li>
 <li><strong>Day 5 (Oct 2):</strong> Palas de Rei → Arzúa (~29 km)
 <ul>
 <li>Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.<br>
 </li>
 <li>Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.</li>
-<li>Overnight: Arzúa TBD</li>
+<li>Overnight: Arzúa <strong>TBD</strong></li>
 </ul></li>
 <li><strong>Day 6 (Oct 3):</strong> Arzúa → O Pedrouzo (~19 km)
 <ul>
 <li>En route visit the chapel of Santa Irene and experience the atmosphere of anticipation in O Pedrouzo as pilgrims gather for the final day.</li>
-<li>Overnight: O Pedrouzo TBD</li>
+<li>Overnight: O Pedrouzo <strong>TBD</strong></li>
 </ul></li>
 <li><strong>Day 7 (Oct 4):</strong> O Pedrouzo → Santiago (~20 km)
 <ul>
@@ -265,7 +265,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening tapas crawl on Rúa do Franco.<br>
 </li>
-<li>Overnight: Pensión Rua Nova (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
+<li>Overnight: <strong>Pensión Rua Nova</strong> (Single room with private bathroom, free Wi-Fi, pedestrian old town location).</li>
 </ul>
 </section>
 <section id="day-9-mon-oct-6" class="level3">
@@ -277,7 +277,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”<br>
 </li>
-<li>Overnight: Finisterre (hotel or albergue in town).</li>
+<li>Overnight: Finisterre <strong>TBD</strong> (or stay third night in Santiago).</li>
 </ul>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
@@ -291,12 +291,13 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening tapas crawl in La Latina or Malasaña.<br>
 </li>
-<li>Overnight: Madrid TBD (stay near Sol, Gran Vía, or La Latina).</li>
+<li>Overnight: Madrid <strong>TBD</strong> (stay near Sol, Gran Vía, or La Latina).</li>
 </ul>
 </section>
 <section id="day-11-wed-oct-8" class="level3">
 <h3 class="anchored" data-anchor-id="day-11-wed-oct-8">Day 11 – Wed Oct 8</h3>
 <ul>
+<li>Cercanías train to Bajaras T4</li>
 <li>Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
 </li>
 <li>Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
@@ -412,8 +413,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Sunglasses<br>
 </li>
 <li>Hat</li>
-<li>Safety pins or clothesline for drying<br>
-</li>
+<li>Safety pins or clothesline for drying (<strong>TBD</strong>)</li>
 <li>Sleep sack / liner (for albergues)<br>
 </li>
 <li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
@@ -429,7 +429,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Book AVE from Santiago to Madrid</li>
 <li>Book Madrid (Oct 6–7) hotels.</li>
 <li>Decide 2 vs.&nbsp;3 nights in Santiago +/- daytrip to Finisterre or other vs.&nbsp;Overnight in Finisterre</li>
-<li>Print or store Renfe QR code + Combinado Cercanías info on phone.</li>
 </ul>
 <hr>
 
