deploy: e20bae4adc033ad72b10842e932897ed8cc45cc4

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -40,7 +40,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-dc55a5b9e770e841cd82e46aadbfb9b0.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-1713c1db1ad41a796903378fc9ac7b2b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-0b37c64f34216b628666a8dac638b53b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -226,24 +226,24 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li><strong>Day 3 (Sept 30):</strong> Sarria → Portomarín (~22 km)
 <ul>
 <li>Cross the Miño River into Portomarín, where the Church of San Nicolás was relocated stone by stone when the original town was flooded for the Belesar reservoir.</li>
-<li>Overnight: Portomarín <strong>TBD</strong></li>
+<li>Overnight: <strong>Pensión Albergue Gonzar</strong> (Booking.com Confirmation no. 5222.020.161)</li>
 </ul></li>
 <li><strong>Day 4 (Oct 1):</strong> Portomarín → Palas de Rei (~25 km)
 <ul>
 <li>Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.</li>
-<li>Overnight: Palas de Rei <strong>TBD</strong></li>
+<li>Overnight: <strong>Albergue San Marcos</strong> (Booking.com Confirmation no. 6000.902.246)</li>
 </ul></li>
 <li><strong>Day 5 (Oct 2):</strong> Palas de Rei → Arzúa (~29 km)
 <ul>
 <li>Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.<br>
 </li>
 <li>Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.</li>
-<li>Overnight: Arzúa <strong>TBD</strong></li>
+<li>Overnight: <strong>Cruce de Caminos Arzúa</strong> (Booking.com Confirmation no. 6336.672.796) — refundable, backup if not staying at Ribadiso</li>
 </ul></li>
 <li><strong>Day 6 (Oct 3):</strong> Arzúa → O Pedrouzo (~19 km)
 <ul>
 <li>En route visit the chapel of Santa Irene and experience the atmosphere of anticipation in O Pedrouzo as pilgrims gather for the final day.</li>
-<li>Overnight: O Pedrouzo <strong>TBD</strong></li>
+<li>Overnight: <strong>Albergue REM</strong> (Booking.com Confirmation no. 6475.800.457)</li>
 </ul></li>
 <li><strong>Day 7 (Oct 4):</strong> O Pedrouzo → Santiago (~20 km)
 <ul>
@@ -277,7 +277,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”<br>
 </li>
-<li>Overnight: Finisterre <strong>TBD</strong> (or stay third night in Santiago).</li>
+<li>Overnight: <strong>Finisterre (book in Santiago if weather/energy permit) OR third night in Santiago</strong> — decision to be made after arrival.</li>
 </ul>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
@@ -287,11 +287,13 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Midday bus back to Santiago (~2.5 hrs).<br>
 </li>
-<li>Connect onward to Madrid in the afternoon (~3 hrs AVE train, ~1 hr flight).<br>
+<li>11:48 — Depart Santiago (AVE 04314, Confort, seat 4D, Booking Reference: KYC3XB).<br>
+</li>
+<li>14:50 — Arrive Madrid Chamartín.<br>
 </li>
 <li>Evening tapas crawl in La Latina or Malasaña.<br>
 </li>
-<li>Overnight: Madrid <strong>TBD</strong> (stay near Sol, Gran Vía, or La Latina).</li>
+<li>Overnight: Madrid <strong>hotel TBD — recommended Sol/Gran Vía/La Latina area</strong>.</li>
 </ul>
 </section>
 <section id="day-11-wed-oct-8" class="level3">
