deploy: c39645fab4b9b0a0a3f4c0bcc757de48859d082e

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -426,10 +426,8 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <section id="notes-next-steps" class="level2">
 <h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
 <ul>
-<li><strong>Camino towns (Sept 30–Oct 4):</strong> book 1–2 nights ahead, especially Portomarín &amp; Arzúa.<br>
-</li>
-<li>Book AVE from Santiago to Madrid</li>
-<li>Book Madrid (Oct 6–7) hotels.</li>
+<li>pack backpack</li>
+<li>Book Madrid (Oct 6–7) hotel.</li>
 <li>Decide 2 vs.&nbsp;3 nights in Santiago +/- daytrip to Finisterre or other vs.&nbsp;Overnight in Finisterre</li>
 </ul>
 <hr>
